feat: added the new commands for the V2.0.0
